--- a/projects/uniqsbattle/CMakeLists.txt
+++ b/projects/uniqsbattle/CMakeLists.txt
@@ -18,14 +18,17 @@ SET(UNIQS_VERSION "${UNIQS_VERSION_MAJOR}.${UNIQS_VERSION_MINOR}.${UNIQS_VERSION
 MESSAGE(STATUS "VERSION: ${UNIQS_VERSION}")
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include/)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../cfg/)
 #INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include/sol/)
 
 FILE(GLOB project_src_cpp "src/*.cpp")
 FILE(GLOB project_src_h "src/*.h")
+FILE(GLOB cfg_src_cpp "cfg/*.cpp")
+FILE(GLOB cfg_src_h "cfg/*.h")
 FILE(GLOB project_include "include/*.h")
 
 IF (WIN32)
     LIST(APPEND project_src_cpp)
 ENDIF(WIN32)
 
-ADD_EXECUTABLE(${PNAME} ${project_src_cpp} ${project_src_h} ${project_include})
+ADD_EXECUTABLE(${PNAME} ${project_src_cpp} ${project_src_h} ${cfg_src_cpp} ${cfg_src_h} ${project_include})
